# fks_config

./: .gitmodules  Cargo.toml  Dockerfile  README-UPDATE.md  SERVICES_CONFIG.md  SERVICE_CONFIG_TEMPLATE.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.pull-only.yml  docker-compose.yml  fks_metrics.py  requirements.txt  run.sh  service_registry.json  start.sh
.github/staging/: fks_config-ci.yml
.github/workflows/: fks_config-ci.yml  sync-configs.yml
config/: README.md  docker.yaml  domains.yaml  main.yaml  master.yaml  services.yaml  sim.yaml  workflow_config.yaml
config/app/: charts.yaml  server.yaml  ui.yaml
config/authelia/: config.yml  users.yml
config/base/: framework.yaml  monitoring.yaml
config/data/: features.yaml  market.yaml  sources.yaml
config/docs/: rust_config.yaml
config/environments/: base.yaml  development.yaml  production.yaml  staging.yaml  testing.yaml
config/exchanges/: exchanges.yaml
config/infrastructure/: build.yaml  external.yaml  global.yaml  services.yaml
config/k8s/: classes.yaml  cluster.yaml  clusterroles.yaml  configmap.yaml  configmaps.yaml  db.yaml  deployments copy.yaml  deployments.yaml  ingress.yaml  namespace.yaml  namespaces.yaml  networkpolicies.yaml  pv.yaml  pvcs.yaml  role-bindings.yaml  roles.yaml  secrets copy.yaml  secrets.yaml  serviceaccounts.yaml  services copy.yaml  services.yaml  statefulsets.yaml
config/k8s/config/: kubeadm-config.yaml
config/k8s/deployments/application/: fks-app-deployments.yaml
config/k8s/deployments/gpu/: fks-gpu-deployments.yaml
config/k8s/kustomization/development/: kustomization.yaml
config/k8s/manifests/classes/: nginx-ingress-class.yaml  nginx.yaml
config/k8s/manifests/cluster/: cluster.yaml
config/k8s/manifests/clusterroles/: datadog-clusterrole.yaml  fks-api-clusterrole.yaml  fks-app-clusterrole.yaml  (+7 more)
config/models/: bayesian.yaml  common.yaml  xgboost.yaml
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/grafana/: grafana.ini
config/monitoring/prometheus/: alert.rules.yml  prometheus.yml
config/ninja/: bridge_config.json  fks_api_config.json  fks_strategy_config.json  lgmm_config.json  log_watcher_config.json  monitor-config.json
config/python/: requirements.yaml
config/redis/: redis.conf
config/services/: api.yaml  app.yaml  data.yaml  training.yaml  transformer.yaml  web.yaml  worker.yaml
config/storage/redis/: redis.conf  sentinel.conf
config/systemd/: fks-ssl-manager.service  fks-ssl-renewal.timer
docker/: Dockerfile
docs/: CENTRAL_CONFIG_GUIDE.md  CONFIG_REVIEW-2025-01-15.md  CONFIG_UPDATE_2025-01.md  SERVICES_CONFIG.md
services/: fks_ai.yaml  fks_analyze.yaml  fks_api.yaml  fks_app.yaml  fks_auth.yaml  fks_crypto.yaml  fks_data.yaml  fks_execution.yaml  fks_futures.yaml  fks_main.yaml  fks_meta.yaml  fks_monitor.yaml  fks_ninja.yaml  fks_portfolio.yaml  fks_training.yaml  fks_web.yaml
shared/: logging.yaml
src/: generator.rs  lib.rs  main.py  main.rs  model.rs
tests/: generate.rs
(+98 files in other folders)
