[package]
name = "fks-config"
version = "0.1.0"
edition = "2021"
description = "Configuration generation CLI for FKS (YAML -> .env, docker snippets, code stubs)."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
chrono = { version = "0.4", features=["clock"] }
uuid = { version = "1", features=["v4"] }
schemars = { version = "0.8", features = ["derive"] }
shared-rust = { path = "shared/rust" }

[dev-dependencies]
tempfile = "3"
