[package]
name = "fks_config"
version = "0.1.0"
edition = "2021"
description = "Configuration generation CLI for FKS (YAML -> .env, docker snippets, code stubs)."

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features=["fmt","env-filter"] }
chrono = { version = "0.4.41", features=["clock"] }
uuid = { version = "1.18.0", features=["v4"] }
schemars = { version = "1.0.4", features = ["derive"] }
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"], optional = true }
hyper = { version = "1.7.0", optional = true }
serde_path_to_error = "0.1.17"

# Shared Rust utilities (added when submodule present at shared/rust)
# shared_rust = { path = "shared/rust", optional = true }

[dev-dependencies]
tempfile = "3.21.0"

[features]
default = ["server"]
server = ["axum", "tokio", "hyper"]
shared = [] # ["shared_rust"] # enable once shared/rust submodule initialized
